fix long items overflowing left column boundry

--- a/civictechprojects/static/css/partials/_AboutProject.scss
+++ b/civictechprojects/static/css/partials/_AboutProject.scss
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: row;
     margin-left: 15px;
+    word-break: break-all;
   }
   .AboutProjects-icon-text {
     margin-left: 10px;
